kubernetes/apps/base-system/gateway/gw-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: gateway
  annotations:
    io.cilium/lb-ipam-ips: "10.0.96.240"
spec:
  gatewayClassName: cilium
  
  listeners:
    - protocol: HTTPS
      port: 443
      name: https-goingdark-gateway
      hostname: goingdark.social
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-goingdark
            namespace: gateway
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-domain-goingdark-gateway
      hostname: "*.goingdark.social"
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-goingdark
            namespace: gateway
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-peekoff-apex
      hostname: "peekoff.com"
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-peekoff-wildcard
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-peekoff-wildcard
      hostname: "*.peekoff.com"
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-peekoff-wildcard
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-mellovy-apex
      hostname: "mellovy.com"
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-mellovy-wildcard
            namespace: gateway
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-mellovy-wildcard
      hostname: "*.mellovy.com"
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-mellovy-wildcard
            namespace: gateway
      allowedRoutes:
        namespaces:
          from: All
